se creo componente Footer y se cambio´el estilo del formulario

--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,13 @@
-body {
-  background: #0f3443; /* Old browsers */
-  background: -moz-linear-gradient(
-    left,
-    #0f3443 0%,
-    #34e69f 100%
-  ); /* FF3.6-15 */
-  background: -webkit-linear-gradient(
-    left,
-    #0f3443 0%,
-    #34e69f 100%
-  ); /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(
-    to right,
-    #0f3443 0%,
-    #34e69f 100%
-  );
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0f3443', endColorstr='#34e69f',GradientType=1 ); 
+#root {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
+.mainPage {
+  flex-grow: 1;
+}
+
+body {
+  background-image: url("https://us.123rf.com/450wm/aquamarine1paint/aquamarine1paint1708/aquamarine1paint170800010/83332862-patr%C3%B3n-sin-fisuras-con-great-dane-y-chihuahua-silueta-peine-collar-correa-hueso-taz%C3%B3n-para-la.jpg?ver=6");
+}
